<resources>
    <string name="app_name">projectggg1001</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Medikamente Speichern</string>
    <string name="menu_mmedikamente">Meine Medikamente</string>
    <string name="menu_arzttermin">Termin beim Arzt hinzufügen</string>
    <string name="menu_arztkrankheit">Welcher Arzt welche Krankheit</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_pwd">Show password</string>
    <string name="name_register">Name</string>
    <string name="alter_register">Alter</string>
    <string name="emailtext_register">E-Mail</string>
    <string name="passwort_register">Passwort</string>
    <string name="title_activity_medspeichern">MedspeichernActivity</string>
</resources>
