<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_alarm_add_black_36dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mmedikamente"
            android:icon="@drawable/baseline_alarm_add_black_36dp"
            android:title="@string/menu_mmedikamente" />
        <item
            android:id="@+id/nav_arzttermin"
            android:icon="@drawable/baseline_home_black_36dp"
            android:title="@string/menu_arzttermin" />
        <item
            android:id="@+id/nav_arztkrankheit"
            android:icon="@drawable/baseline_event_note_black_36dp"
            android:title="@string/menu_arztkrankheit" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/baseline_person_black_18dp"
            android:title="@string/menu_profil" />

    </group>

</menu>
