<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_register">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_marginBottom="10dp">

    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alter_register">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAlter"
        android:layout_marginBottom="10dp">

    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailtext_register">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_marginBottom="10dp">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Şifre">

    </TextView>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:id="@+id/etPasswort2"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text=""
        android:textSize="13dp">

    </EditText>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbShowPwd"
        android:layout_alignLeft="@+id/etPasswort"
        android:layout_below="@+id/etPasswort"
        android:text="@string/show_pwd">
    </CheckBox>



    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="Kayıt ol">

    </Button>

</LinearLayout>